--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <p> You might've read the title and are now wondering if I am a faggot, yes that is true I hate 
 people by their accident of birth and also I am a femboy who loves to get fucked in the ass.
 Thank you for coming to my TED Talk </p>
-<img scr="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.reddit.com%2Fr%2FTIHI%2Fcomments%2Fkfknat%2Fthanks_i_hate_femboy_hitler%2F&psig=AOvVaw2JtA-CMWwTenWtYfk4ZSBk&ust=1639307706253000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCNi0sKXP2_QCFQAAAAAdAAAAABAD" alt="Femboy Hitler">
-     <p> Picture in question is me!!1 </p>
+<img scr="https://preview.redd.it/8omcmy8v0y561.jpg?width=960&crop=smart&auto=webp&s=c09d7b8bba7b65710df58817caf231a659218348">
+
      </body>
 </html>
 
