--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <h1> Niggers and Jews </h1>
 <p> You might've read the title and are now wondering if I am a faggot, yes that is true I hate 
 people by their accident of birth and also I am a femboy who loves to get fucked in the ass.
-Thank you for coming to my TED Talk. 
-     Signing off,
-     - Phoon
+Thank you for coming to my TED Talk.<br>
+     Signing off,<br>
+     - Phoon<br>
      P.S: The pic below is me uwu</p>
 <img src="https://preview.redd.it/8omcmy8v0y561.jpg?width=960&crop=smart&auto=webp&s=c09d7b8bba7b65710df58817caf231a659218348">
 
