--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Thank you for coming to my TED Talk.<br>
      Signing off,<br>
      - Phoon<br>
      P.S: The pic below is me uwu</p>
-<img src="https://preview.redd.it/8omcmy8v0y561.jpg?width=960&crop=smart&auto=webp&s=c09d7b8bba7b65710df58817caf231a659218348">
+<img src="https://preview.redd.it/8omcmy8v0y561.jpg?width=960&crop=smart&auto=webp&s=c09d7b8bba7b65710df58817caf231a659218348" width="350",height="100">
 
      </body>
 </html>
