--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ Thank you for coming to my TED Talk.<br>
      P.S: The pic below is me uwu</p>
 <img src="https://preview.redd.it/8omcmy8v0y561.jpg?width=960&crop=smart&auto=webp&s=c09d7b8bba7b65710df58817caf231a659218348" width="350",height="100">
 
+     
+     <input = 'text' placeholder = "Any other questions?"
      </body>
 </html>
 
